# article_intelligence

./: .gitignore  README.md  call_google_api.py
poetry_package/: pyproject.toml
poetry_package/tests/: test_poetry_package.py
