[tool.poetry]
name = "poetry_package"
version = "0.1.0"
description = ""
authors = ["aurélien <aurelien.turpin1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# google-cloud-language = "^2.0.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
